[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-flvmeta"
version = "0.0.2"
authors = [
  { name="qqyuanxinqq"},
]
description = "A Python wraper for flvmeta"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/qqyuanxinqq/py-flvmeta"
"Bug Tracker" = "https://github.com/qqyuanxinqq/py-flvmeta/issues"

[tool.setuptools.package-data]
pyflvmeta = ["flvmeta", "flvmeta.exe"]
